<resources>
    <string name="app_name">pinya</string>
    <string name="text_id_hint">帳號</string>
    <string name="text_password_hint">密碼</string>
    <string name="text_login">登入</string>
    <string name="text_pinya">品雅有限公司</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tools_userName">沒姓名</string>
    <string name="tools_carId">ABC1234</string>
    <string name="tools_date">2020/12/01</string>
    <string name="text_logout">登出</string>
    <string name="text_wrong_password">帳號或密碼錯誤</string>
    <string name="text_enter">確定</string>
    <string name="text_retry">重試</string>
    <string name="text_loading">請稍候...</string>
    <string name="text_please_enter_id">請輸入帳號</string>
    <string name="text_please_select_company">請選擇廠商</string>
    <string name="text_next">下一步</string>
    <string name="text_cancel">取消</string>
    <string name="text_up">上一步</string>
    <string name="text_company1">廠商：</string>
    <string name="text_site1">工地：</string>
    <string name="text_address1">地點：</string>
    <string name="text_cost1">單價：</string>
    <string name="text_meter1">米數：</string>
    <string name="text_time1">時間：</string>
    <string name="text_number1">車次：</string>
    <string name="text_ps1">備註：</string>
    <string name="text_newDailyReport">新增日報表</string>
    <string name="text_please_select_address">請選擇地點</string>
    <string name="text_please_select_site">請選擇工地</string>
    <string name="text_finishes">完成</string>
    <string name="text_please_select_carId">請選擇車號</string>
    <string name="text_delete">刪除</string>
    <string name="format_meter">%d 米</string>
    <string name="format_accound">『%s』已辦過帳號</string>
    <string name="format_dailyreport">『%s』的日報表中還有文件</string>
    <string name="format_expenditure">『%s』的支出表中還有文件</string>
    <string name="format_car">『%s』的違規事項中還有文件</string>
    <string name="format_number">%d</string>
    <string name="format_hour_minute">$d:$d</string>
    <string name="text_change">更換</string>
    <string name="format_price">%d元</string>
    <string name="text_updata_dailyreport">修改日報表</string>
    <string name="text_add_dailyreport">新增日報表</string>
    <string name="text_driver1">司機：</string>
    <string name="text_carId1">車號：</string>
    <string name="text_date1">日期：</string>
    <string name="text_violation1">違規點數：</string>
    <string name="text_company">廠商</string>
    <string name="text_site">工地</string>
    <string name="text_cost">單價</string>
    <string name="text_time">時間</string>
    <string name="text_address">地點</string>
    <string name="text_number">車次</string>
    <string name="text_meter">米數</string>
    <string name="text_month1">月份：</string>
    <string name="text_type">類型</string>
    <string name="text_carId">車號</string>
    <string name="text_date">日期</string>
    <string name="text_ps">備註</string>
    <string name="text_price">價格</string>
    <string name="text_newExpenditure">新增支出表</string>
    <string name="text_type1">類型：</string>
    <string name="text_price1">價格：</string>
    <string name="text_admin">管理員</string>
    <string name="text_dailyreport">日報表</string>
    <string name="text_expenditure">支出表</string>
    <string name="text_statistics">統計表</string>
    <string name="text_other_manage">其他管理</string>
    <string name="text_expenditure_manage">支出表管理</string>
    <string name="text_dailyreport_manage">日報表管理</string>
    <string name="text_driver">司機</string>
    <string name="text_please_select_userName">請選擇司機</string>
    <string name="text_delete_fail">刪除失敗</string>
    <string name="text_delete_success">刪除成功</string>
    <string name="text_delete_admin_fail">刪除失敗！</string>
    <string name="text_please_import_price">請輸入價格</string>
    <string name="text_company_manage">廠商管理</string>
    <string name="text_car_manage">車輛管理</string>
    <string name="text_user_manage">員工管理</string>
    <string name="text_car_monthly_statistics">車輛月統計表</string>
    <string name="text_company_monthly_statistics">廠商月統計表</string>
    <string name="text_user_monthly_statistics">員工薪水統計表</string>
    <string name="text_user_name">姓名：</string>
    <string name="text_account">帳號：</string>
    <string name="text_shipping">運費：</string>
    <string name="text_car_owner">車主</string>
    <string name="text_car_owner1">車主：</string>
    <string name="text_password">密碼：</string>
    <string name="text_take_office_date">到職日期：</string>
    <string name="text_yes">是</string>
    <string name="text_no">否</string>
    <string name="text_edit_import">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="text_car_edit_import">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="text_password_check">密碼確認：</string>
    <string name="text_user_manage_add">新增員工資料</string>
    <string name="text_account_remind">請輸入 3 到 15 個字符</string>
    <string name="text_password_remind">請輸入 8 到 16 個字符</string>
    <string name="text_user_manage_edit">編輯員工資料</string>
    <string name="text_please_import_stuff_name">請輸入員工姓名</string>
    <string name="text_import_account_less_3">輸入的帳號長度小於 3</string>
    <string name="text_import_password_less_8">輸入的密碼長度小於 8</string>
    <string name="text_import_password_not_equal">與輸入的密碼不相符</string>
    <string name="text_please_import_shipping">請輸入運費</string>
    <string name="text_edit">編輯</string>
    <string name="text_company_name">廠商名稱：</string>
    <string name="text_company_add">新增廠商資料</string>
    <string name="text_end_date">每月結算日：</string>
    <string name="text_invoice_tax_rate">發票稅率：</string>
    <string name="text_check_tax_rate">支票稅率：</string>
    <string name="format_end_date">%d 號</string>
    <string name="text_company_edit">編輯廠商資料</string>
    <string name="text_site_name">工地名稱：</string>
    <string name="text_site_add">新增工地資料</string>
    <string name="text_site_edit">編輯工地資料</string>
    <string name="text_please_import_site_name">請輸入工地名稱</string>
    <string name="text_address_add">新增地點／單價</string>
    <string name="text_address_edit">編輯地點／單價</string>
    <string name="text_please_import_address">請輸入地點地址</string>
    <string name="text_please_import_cost">請輸入單價</string>
    <string name="text_leave_office">離職</string>
    <string name="text_take_office">復職</string>
    <string name="text_address_already_exists">地點已經存在</string>
    <string name="text_account_already_exists">帳號已經存在</string>
    <string name="text_site_already_exists">工地已經存在</string>
    <string name="text_company_already_exists">廠商已經存在</string>
    <string name="text_please_import_invoice_tax_rate">請輸入廠商發票稅率</string>
    <string name="text_please_import_check_tax_rate">請輸入廠商支票稅率</string>
    <string name="text_please_import_tax_rate">請輸入廠商稅率</string>
    <string name="please_import_end_date_1_28">請輸入每月結算日 1 ~ 28</string>
    <string name="please_import_company_name">請輸入廠商名稱</string>
    <string name="text_person_in_charge">負責人</string>
    <string name="text_violation">違規</string>
    <string name="text_loan">貸款</string>
    <string name="text_car_manage_add">新增車輛資料</string>
    <string name="text_car_manage_edit">編輯車輛資料</string>
    <string name="text_person_in_charge1">負責人：</string>
    <string name="text_loan1">貸款金額：</string>
    <string name="text_loan_months">貸款期數：</string>
    <string name="text_please_import_carId">請輸入車牌號碼</string>
    <string name="text_loan_payment">已付期數：</string>
    <string name="text_payment_date">每月付款日期：</string>
    <string name="format_loan">%d / %d</string>
    <string name="text_please_select_driver">請選擇司機</string>
    <string name="text_please_select_car_id">請選擇車號</string>
    <string name="text_please_import_meter">請輸入米數</string>
    <string name="text_please_import_car_number">請輸入車次</string>
    <string name="text_please_import_car_id">請輸入車號</string>
    <string name="text_please_select_person_in_charge">請選擇負責人</string>
    <string name="text_please_import_loan">請輸入貸款金額</string>
    <string name="text_please_import_loan_months">請輸入貸款期數</string>
    <string name="text_please_import_loan_payment">請輸入已付期數</string>
    <string name="text_carId_already_exists">車號已經存在</string>
    <string name="text_0">0</string>
    <string name="text_please_import_payment_date_1_28">請輸入每月付款日期 1 ~ 28</string>
    <string name="text_import_payment_date_over">輸入的期限超過貸款期限</string>
    <string name="text_total_violation1">總違規點數：</string>
    <string name="text_violation_add">新增違規事項</string>
    <string name="text_violation_date1">違規日期：</string>
    <string name="text_add">新增</string>
    <string name="comeback">返回</string>
    <string name="text_violation_edit">編輯違規事項</string>
    <string name="text_violation_manage">%s 違規事項管理</string>
    <string name="text_please_import_violation_date">請選擇違規日期</string>
    <string name="text_please_import_violation_point">請輸入違規點數 1 ~ 2</string>
    <string name="text_updata_expenditure">修改支出表</string>
    <string name="text_please_check_internet">請檢查網路連線</string>
    <string name="text_violation_date">違規日期</string>
    <string name="text_point">點數</string>
    <string name="text_night">夜班：</string>
    <string name="text_please_import_night_price">請輸入夜班價格</string>
    <string name="text_monthly_statistics">月統計表</string>
    <string name="text_wrong_work">已離職，若有問題請聯繫管理員</string>
    <string name="text_please_import_correct_hour">請輸入正確時間 0 ~ 23</string>
    <string name="text_please_import_correct_minute">請輸入正確時間 0 ~ 60</string>
    <string name="text_other">其它</string>
    <string name="text_please_import_ps">請輸入備註</string>
    <string name="text_all_meter1">總米數：</string>
    <string name="text_all_expenditure1">總支出：</string>
</resources>