<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dailyReport_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.dailyReport.DailyReportFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_driver1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userName_TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        tools:text="@string/tools_userName" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_carId1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/carId_TextView"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/carId_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/carId_imageButtom"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        tools:text="@string/tools_carId" />

    <ImageButton
        android:id="@+id/carId_imageButtom"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_baseline_arrow_drop_down_24"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="110dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        tools:text="@string/tools_date" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_date1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/userName_TextView" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/text_violation1"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/data_imageButton"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <TextView
        android:id="@+id/violat_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F44336"
        android:textColorHint="#F44336"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        tools:text="9" />

    <ImageButton
        android:id="@+id/data_imageButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/ic_baseline_arrow_drop_down_24"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/date_textView"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/pinya_yellow1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_imageButton">

        <TextView
            android:id="@+id/meter_textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/pinya_green2"
            android:gravity="center"
            android:text="@string/text_meter"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/numder_textView"
            app:layout_constraintEnd_toEndOf="@+id/itemDate_textView"
            app:layout_constraintStart_toStartOf="@+id/itemDate_textView"
            app:layout_constraintTop_toTopOf="@+id/numder_textView" />

        <TextView
            android:id="@+id/numder_textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/pinya_green3"
            android:gravity="center"
            android:text="@string/text_number"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/address_textView"
            app:layout_constraintEnd_toEndOf="@+id/price_textView"
            app:layout_constraintStart_toStartOf="@+id/price_textView"
            app:layout_constraintTop_toTopOf="@+id/address_textView" />

        <TextView
            android:id="@+id/address_textView"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:background="@color/pinya_green2"
            android:gravity="center"
            android:lines="2"
            android:minHeight="50dp"
            android:padding="2dp"
            android:text="@string/text_address"
            app:layout_constraintEnd_toEndOf="@+id/site_textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/company_textView"
            app:layout_constraintTop_toBottomOf="@+id/company_textView" />

        <TextView
            android:id="@+id/company_textView"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:background="@color/pinya_green1"
            android:gravity="center"
            android:lines="1"
            android:minHeight="50dp"
            android:text="@string/text_company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/site_textView"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:background="@color/pinya_green3"
            android:gravity="center"
            android:lines="1"
            android:padding="2dp"
            android:text="@string/text_site"
            app:layout_constraintBottom_toBottomOf="@+id/company_textView"
            app:layout_constraintStart_toEndOf="@+id/company_textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemDate_textView"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:background="@color/pinya_green3"
            android:gravity="center"
            android:lines="1"
            android:text="@string/text_time"
            app:layout_constraintBottom_toBottomOf="@+id/price_textView"
            app:layout_constraintStart_toEndOf="@+id/price_textView"
            app:layout_constraintTop_toTopOf="@+id/price_textView" />

        <TextView
            android:id="@+id/price_textView"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:background="@color/pinya_green1"
            android:gravity="center"
            android:lines="1"
            android:text="@string/text_cost"
            app:layout_constraintBottom_toBottomOf="@+id/site_textView"
            app:layout_constraintStart_toEndOf="@+id/site_textView"
            app:layout_constraintTop_toTopOf="@+id/site_textView" />

        <TextView
            android:id="@+id/ps_textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:background="@color/pinya_green1"
            android:gravity="center"
            android:lines="4"
            android:minWidth="50dp"
            android:padding="2dp"
            android:text="@string/text_ps"
            app:layout_constraintBottom_toBottomOf="@+id/address_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/itemDate_textView"
            app:layout_constraintTop_toTopOf="@+id/itemDate_textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dailyreport_recylerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>