<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/expenditure_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.expenditure.ExpenditureFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_driver1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userName_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:text="@string/tools_userName" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_month1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/month_textView"
        app:layout_constraintTop_toTopOf="@+id/userName_textView" />

    <TextView
        android:id="@+id/month_textView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/mount_imageButtom"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        tools:text="2020/09" />

    <ImageButton
        android:id="@+id/mount_imageButtom"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_baseline_arrow_drop_down_24"
        app:layout_constraintBottom_toBottomOf="@+id/month_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/month_textView" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:stretchColumns="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName_textView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/pinya_green1"
                android:gravity="center"
                android:text="@string/text_type"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@color/pinya_green3"
                android:gravity="center"
                android:text="@string/text_carId"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/pinya_green1"
                android:gravity="center"
                android:text="@string/text_date"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/pinya_green3"
                android:gravity="center"
                android:text="@string/text_price"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expenditure_recylerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>