<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pinya_yellow2"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".fragments.dailyreport.DRAdd1Fragment">

    <TextView
        android:id="@+id/add1_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/text_please_select_company"
        android:textSize="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_add1"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:paddingTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add1_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_cancel" />

        <Button
            android:id="@+id/add1_next_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_next" />
    </LinearLayout>
</LinearLayout>